Use go-kit
